--- a/package.json
+++ b/package.json
@@ -1,22 +1,38 @@
 {
-  "name": "drum-management",
-  "version": "0.1.0",
+  "name": "eltron-drums-system",
+  "version": "1.0.0",
+  "description": "System zarządzania bębnami dla Grupy Eltron",
   "private": true,
+  "scripts": {
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "migrate": "node migrations/001_initial_migration.js",
+    "migrate:dev": "NODE_ENV=development node migrations/001_initial_migration.js",
+    "api:dev": "vercel dev",
+    "deploy": "vercel --prod"
+  },
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "@vercel/postgres": "^0.9.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.263.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@vercel/node": "^3.0.21",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vercel": "^32.7.2"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +51,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "drums",
+    "management",
+    "system",
+    "eltron",
+    "logistics"
+  ],
+  "author": {
+    "name": "Grupa Eltron",
+    "email": "kontakt@grupaeltron.pl"
+  },
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/eltron-drums-system.git"
+  },
+  "homepage": "."
 }
