--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "@vercel/node": "^3.0.21",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
