--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/typography": "^0.5.10",
     "@vercel/node": "^3.0.21",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
