--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "scripts": {
     "dev": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "node migrate.js && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "migrate": "node migrations/001_initial_migration.js",
+    "migrate": "node migrate.js",
     "migrate:dev": "NODE_ENV=development node migrations/001_initial_migration.js",
     "api:dev": "vercel dev",
     "deploy": "vercel --prod"
