--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
   "homepage": ".",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "migrate": "node migrate.js",
     "dev": "react-scripts start",
-    "vercel-build": "npm run build"
+    "vercel-build": "CI=false npm run build"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -57,7 +57,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "warn"
+    }
   },
   "browserslist": {
     "production": [
